using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace FieldValidation.pattern.Email2State
{
	public interface IStatus
	{
		void Woord();
		void Punt();
		void At();
	}
}
